Add the free kits GUI
Voter kits have yet to be added here

--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -28,3 +28,39 @@ selector:
       lore:
         - "&5Unlock kits here!"
       location: 40
+free:
+  name: "&2Free Kits"
+  items:
+    archer:
+      name: "&a&lCLASS:&r&a Archer"
+      material: "BOW"
+      lore:
+        - "&6------------------------------"
+        - "&2[Desc]:&a The standard ranged kit."
+        - "&2[Armor]:&a Leather armor."
+        - "&2[Weapon]:&a Wooden sword, bow and 32 arrows."
+        - "&2[Status]:&a Free to play!"
+        - "&6------------------------------"
+      location: 10
+    spearman:
+      name: "&a&lCLASS:&r&a Spearman"
+      material: "STICK"
+      lore:
+        - "&6------------------------------"
+        - "&2[Desc]:&a A kit that can throw spears."
+        - "&2[Armor]:&a Chainmail armor."
+        - "&2[Weapon]:&a 5 spears."
+        - "&2[Status]:&a Free to play!"
+        - "&6------------------------------"
+      location: 13
+    swordsman:
+      name: "&a&lCLASS:&r&a Swordsman"
+      material: "IRON_SWORD"
+      lore:
+        - "&6------------------------------"
+        - "&2[Desc]:&a The standard melee kit."
+        - "&2[Armor]:&a Iron armor."
+        - "&2[Weapon]:&a Iron sword."
+        - "&2[Status]:&a Free to play!"
+        - "&6------------------------------"
+      location: 16
