--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -26,7 +26,7 @@ selector:
       name: "§eShop"
       material: "SUNFLOWER"
       lore:
-        - "§5Unlock kits here!"
+        - "Unlock kits here!"
       location: 40
 free:
   name: "§2Free Kits"
